2002-02-05  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkimage.c (gtk_image_expose): offset area being gotten from
	pixmap by the align/padding offsets, so we don't get warnings
	in gdk_pixbuf_get_from_drawable (and so it works, of course)

2002-02-05  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkrc.c (gtk_rc_parse_file): Remove a (now) misleading comment.

2002-02-05  Federico Mena Quintero  <federico@ximian.com>

	* gdk/gdkwindow.h: Do not #include <gdk/gdkwindow.h>.

Tue Feb  5 22:54:16 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkliststore.c (gtk_list_store_insert_after): let's set the
	path, which we're going to pass with the emission of row_inserted, to
	the iter we inserted and not its sibling.

2002-02-04 Padraig O'Briain <padraig.obriain@sun.com>

	* gtk/gtkmenu.c (gtk_menu_popup):
	Fix leak of GdkEvent (#70519)

Mon Feb  4 10:40:28 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.c (gtk_default_draw_resize_grip):
	Fix from Matthias Clasen to clear background appropriately
	for theme by calling gtk_style_apply_default_background().
	(#70449)

Mon Feb  4 10:06:49 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c: gtk-double-click-time,
	not gtk-double-click-timeout. (#70501)

2002-02-04  Havoc Pennington  <hp@pobox.com>

	* gtk/gtksignal.c (gtk_signal_connect_while_alive): 
	(gtk_signal_connect_object_while_alive): rename 
	"signal" arg to "name" to avoid compiler warnings
	about shadowing signal(). #70453

2002-02-03  Anders Carlsson  <expander-master@gtk.org>

	* gtk/gtkstyle.c (gtk_default_draw_expander): Add 
	flipping support to the expanders.

Sat Feb  2 21:54:01 2002  Owen Taylor  <otaylor@redhat.com>

	RC file lookup improvements (#68234, suggestions
	from Matthias Clasen.)

	* gtk/gtkrc.c (gtk_rc_parse_file): Look for the 
	locale suffix variants (gtkrc.en_US, gtkrc.en) for
	all RC files we parse, not just the default RC
	files.

	* gtk/gtkrc.c (gtk_rc_parse_default_files): Remove